difficulty level setting added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         </div>
         
         <div>
+            <select name="" id="difficulty">
+                <option value="1">Facile</option>
+                <option value="2">Medio</option>
+                <option value="3">Difficile</option>
+            </select>
+
             <button class="btn" onclick="play()">Play</button>
         </div>
     
